--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Go</title>
-    </head>
-    <body>
-        <object data="goBoard.svg" type="image/svg+xml" id="board" width="100%" height="100%"></object>
-        <script src="go.js" type="text/javascript"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Go</title>
+</head>
+
+<body>
+    <div class="ipInput" id="ipInput">
+        <label for="ip">Server IP</label>
+        <input type="text" id="ip" value="localhost">
+        <button id="submit" onclick="newGame(ip.value)">Connect</button>
+        <br>
+    </div>
+
+    <object data="goBoard.svg" type="image/svg+xml" id="board" width="100%" height="100%"></object>
+    <script src="go.js" type="text/javascript"></script>
+</body>
+
 </html>
